--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -22,13 +22,19 @@
     </ul>
 
     <hr>
-    <a href="{% url 'contas_senhas' %}"><h5>Envia Contas e Senhas</h5></a>
-    <a href="{% url 'nomes' %}"><h5>Ajustar Maiúsculas e Minúsculas de Nomes de Usuários</h5></a>
+    <h5>Contas e Senhas</h5>
+    <ul>
+        <li><a href="{% url 'contas_senhas' %}">Envia Contas e Senhas para Estudantes</a></li>
+        <li><a href="{% url 'nomes' %}">Ajustar Maiúsculas e Minúsculas de Nomes de Usuários</a></li>
+    </ul>
 
     <hr>
-    <a href="{% url 'index_carregar' %}"><h5>Carregar Dados</h5></a>
-    <a href="{% url 'exportar' 'dados' %}"><h5>Exportar Dados</h5></a>
-    <a href="{% url 'exportar' 'relatorios' %}"><h5>Exportar Relatórios</h5></a>
+    <h5>Dados</h5>
+    <ul>
+        <li><a href="{% url 'index_carregar' %}">Carregar Dados</a></li>
+        <li><a href="{% url 'exportar' 'dados' %}">Exportar Dados</a></li>
+        <li><a href="{% url 'exportar' 'relatorios' %}">Exportar Relatórios</a></li>
+    </ul>
 
     <hr>
     <h5>Supervisão de Sistema</h5>
