--- a/estudantes/templates/estudantes/index_estudantes.html
+++ b/estudantes/templates/estudantes/index_estudantes.html
@@ -11,17 +11,22 @@
         .mensagem {
             visibility: hidden;
             min-width: 250px;
-            margin-left: -125px;
+            max-width: 100%;
             background-color: #333;
             color: #fff;
             text-align: center;
             border-radius: 2px;
-            padding: 16px;
+            padding: 12px;
             position: fixed;
             z-index: 1;
             left: 50%;
             bottom: 30px;
             font-size: 17px;
+            transform: translate(-50%, 0);
+            -webkit-transform: translate(-50%, 0);
+            -moz-transform: translate(-50%, 0);
+            -ms-transform: translate(-50%, 0);
+            border: 4px solid #909090;
         }
         
         .show {
