unificando formulário de informações de estudantes

--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -59,7 +59,7 @@
     {% if not areas %}
     <h5 class="text-warning">
     Você ainda não selecionou nenhuma área de interesse, por favor, faça alguma seleção antes de confirmar os projetos desejados:
-    <a href="{% url 'areas_interesse' %}">
+    <a href="{% url 'informacoes_adicionais' %}">
       Áreas de Interesse
     </a>
     <br><br>
