--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -10,13 +10,24 @@
     textarea {
       max-width:100%;
     }
+    .modal-open .modal {
+      overflow: hidden;
+    }
+    .modal-body {
+      height: calc(80vh - 64px);
+      overflow-y:scroll;
+    }
+    .ent_nome {
+      cursor:pointer;
+    }
+    .ent_nome:hover {
+      background-color: #eee;
+    }
   </style>
   <script>
-    //var popUpList = $('<div><input type="radio">A<br><input type="radio">B<br><input type="radio">C</div>');
     $(document).ready(function(){
-      $("small").click(function(){
-        alert("{% for e in entidades %}• {{e.nome}}\n{% endfor %}");
-        //popUpList.dialog();
+      $("#entidades").click(function(){
+        $('#lista_entidades').modal({show: true});
       });
     });
   </script>
@@ -24,11 +35,18 @@
 
 {% block content %}
 
-  <span class="titulo">Formulário de Informações Adicionais</span>
+  <span class="titulo">Interesses e Experiências</span>
   {% if mensagem %}<h5 class="red-bold">{{mensagem}}</h5>{% endif %}
+  {% if vencido and user.tipo_de_usuario == 1 %}<h5 class="red-bold">Prazo vencido. Você não pode mais editar seus dados!</h5>{% endif %}
 
-  <form action="" method="post"> {% csrf_token %}  
+  <form method="post"> {% csrf_token %}  
 
+    <span style="display: inline-block; margin-bottom: 6px;">Selecionar suas áreas de interesse:</span><br>
+    <div style="display: inline-block; border: 1px solid grey; padding: 8px;">
+      {% include "areas.html" with aa=estudante.user.areadeinteresse_set.all %}
+    </div>
+    <br><br>
+    
     <label for="trabalhou">
     Você já trabalhou/trabalha ou estagiou/estagia em alguma empresa de engenharia?<br>
     Se sim, qual/quais?
@@ -49,7 +67,7 @@
     </label><br>
     <textarea id="entidade" name="entidade" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if estudante.entidade %}{{estudante.entidade}}{% endif %}</textarea>
     <br>
-    <small><u>Lista de Entidades.</u></small>
+    <small id="entidades" style="cursor:pointer;"><u>Lista de Entidades.</u></small>
     <!-- Pega Script para preencher entidades automaticamente -->
     <br><br>
 
@@ -74,8 +92,30 @@
     {% endcomment %}
 
     <br><br>
-    <input {% if vencido %}disabled{% endif %} type="submit" value="Atualizar">
+    <input class="btn btn-primary" {% if vencido %}disabled{% endif %} type="submit" value="Atualizar">
 
   </form>
+
+  <div class="modal fade" id="lista_entidades">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Entidades Estudantis</h4>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+                {% for e in entidades %}
+                  <p class="ent_nome">{{e.nome}}</p>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+  </div>
+
+  <script>
+    $(".ent_nome").click(function(e){
+      $("#entidade").append(e.target.innerHTML+"; ");
+    });
+  </script>
 
 {% endblock %}
