--- a/administracao/templates/administracao/montar_grupos.html
+++ b/administracao/templates/administracao/montar_grupos.html
@@ -285,17 +285,17 @@
   <hr style="margin-top: 2px;">
   
   <form action="" method="post" class="esconder"> {% csrf_token %}
-    <input type="submit" class="btn btn-primary" name="limpar"
+    <input type="submit" class="btn btn-primary" name="limpar" style="margin-bottom: 4px;"
            data-toggle="tooltip" data-html="true" animation="true"
            title="Remove todos os movimentos de estudantes já realizadas e coloca todos de volta em suas primeiras opções.{% if user.tipo_de_usuario != 4 %}<p><b>Você não tem privilégios suficientes.</b></p>{% endif %}"
            value="Resetar Pré Alocações" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
 
-    <input type="button" class="btn btn-primary" id="propor" name="propor"
+    <input type="button" class="btn btn-primary" id="propor" name="propor" style="margin-bottom: 4px;"
            data-toggle="tooltip" data-html="true" animation="true"
            title="Sistema propõe uma montagem de grupos em função das opções, cursos, CR e interesses.{% if user.tipo_de_usuario != 4 %}<p><b>Você não tem privilégios suficientes.</b></p>{% endif %}"
            value="Montar Grupos Automaticamente" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
 
-    <input type="submit" class="btn btn-primary" name="fechar" 
+    <input type="submit" class="btn btn-primary" name="fechar"  style="margin-bottom: 4px;"
            data-toggle="tooltip" data-html="true" animation="true"
            title="Cria efetivamente os projetos na base de dados e avança para a seleção de orientadores.{% if user.tipo_de_usuario != 4 %}<p><b>Você não tem privilégios suficientes.</b></p>{% endif %}"
            value="Fechar Projetos" {% if user.tipo_de_usuario != 4 %}disabled{% endif %}>
@@ -576,24 +576,28 @@
       val = sumValues(desbalanceadas);
       $("#desbalanceadas").html("<b>" + val + "</b>");
       if (val > 0) {
-        $("#desbalanceadas").append(" [ ");
+        var texto = "";
+        texto += "<span style='display:inline-block;'> &nbsp;[ ";
         Object.keys(desbalanceadas).sort().forEach(function(key, i) {
-          if (i != 0) {$("#desbalanceadas").append(" | ");}
-          $("#desbalanceadas").append(desbalanceadas[key] + "x : " + key + " estudante" + (key > 1 ? "s" : ""));
+          if (i != 0) {texto += " | ";}
+          texto += desbalanceadas[key] + "x : " + key + " estudante" + (key > 1 ? "s" : "");
         });
-        $("#desbalanceadas").append(" ]");
+        texto += " ]</span>";
+        $("#desbalanceadas").append(texto);
       }
 
       // Atualiza os valores de balanceadas
       val = sumValues(balanceadas);
       $("#balanceadas").html("<b>" + val + "</b>");
       if (val > 0) {
-        $("#balanceadas").append(" [ ");
+        var texto = "";
+        texto += "<span style='display:inline-block;'> &nbsp;[ ";
         Object.keys(balanceadas).sort().forEach(function(key, i) {
-          if (i != 0) {$("#balanceadas").append(" | ");}
-          $("#balanceadas").append(balanceadas[key] + "x : " + key + " estudante" + (key > 1 ? "s" : ""));
+          if (i != 0) {texto += " | ";}
+          texto += balanceadas[key] + "x : " + key + " estudante" + (key > 1 ? "s" : "");
         });
-        $("#balanceadas").append(" ]");
+        texto += " ]</span>";
+        $("#balanceadas").append(texto);
       }
 
       // Atualiza os valores de balanceadas
