escondendo icone de email se nao ha usuários

--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -168,8 +168,10 @@
         {% endwith %}
 
         <p class="estudantes pess_proj"><b>Estudantes:</b>
-          <span class="emails esconder"><a href="mailto:{% for alocacao in projeto.alocacao_set.all %}&lt;{{alocacao.aluno.user.email}}&gt;{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caros%20{% for alocacao in projeto.alocacao_set.all %}%20{{alocacao.aluno.user.first_name}},{% endfor %}%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">&#x2709;</a></span>
-        </p>
+            {% with alocacoes=projeto.alocacao_set.all %}{% if alocacoes %}
+              <span class="emails esconder"><a href="mailto:{% for alocacao in projeto.alocacao_set.all %}&lt;{{alocacao.aluno.user.email}}&gt;{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caros%20{% for alocacao in projeto.alocacao_set.all %}%20{{alocacao.aluno.user.first_name}},{% endfor %}%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">&#x2709;</a></span>
+            {% endif %}{% endwith %}
+          </p>
         <ol class="estudantes" style="margin-bottom:5px;">
         {% for aluno,prioridade in prioridades %}
           <li><a class="imprimir" href="{% url 'estudante_detail' aluno.id %}"
@@ -217,9 +219,11 @@
             NÃO DEFINIDA
           {% endif %}
 
+          {% if conexoes %}
           <span class="emails esconder"><a 
             href="mailto:{% for conexao in conexoes %}&lt;{{conexao.parceiro.user.email}}&gt;{% if not forloop.last %},{% endif %}{% endfor %}?subject=PFE%20Insper%20-%20Projeto:%20{{projeto}}&body=Caros%20{% for conexao in conexoes %}%20{{conexao.parceiro.user.first_name}},{% endfor %}%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenador_email}}%20(coordenação%20PFE)" target="_blank">&#x2709;</a></span>
-        </p>
+          {% endif %}
+          </p>
 
         <ol class="conexoes" style="margin-bottom:0px;">
         {% for conexao in conexoes %}
