--- a/professores/templates/professores/bancas_alocadas.html
+++ b/professores/templates/professores/bancas_alocadas.html
@@ -42,15 +42,23 @@
     }
 
     .arredondado tr {
-      background: #F0F0F0;
-      line-height:1;
+      line-height:1.3;
       height: 1px;
     }
 
     .arredondado td {
+      background: #F0F0F0;
       vertical-align: middle;
       border: 1px solid grey;
       border-radius: 6px;
+    }
+
+    tresp {
+      display: inline-block;
+      max-width: 100%;
+      overflow-x: clip;
+      text-overflow: ellipsis;
+      text-wrap: nowrap;
     }
 
   </style>
@@ -61,11 +69,12 @@
   
     <span class="titulo">Participação em Bancas</span>
 
+    <table class="table table-borderless table-sm arredondado">
     {% for banca in bancas %}
       {% ifchanged banca.periodo %}
-        {% if not forloop.first %}</tbody></table>{% endif %}
-        <div style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">{{ banca.periodo }}</div>
-        <table class="table table-borderless table-sm arredondado"><tbody>
+        {% if not forloop.first %}</tbody>{% endif %}
+        <thead><tr><th style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">{{ banca.periodo }}</th></tr></thead>
+        <tbody>
       {% endifchanged %}
 
       <tr><td>
@@ -94,7 +103,7 @@
         </div>
           
           {% if banca.projeto %}
-            <div style="max-width: 100%; display: inline-block; overflow-x: clip; text-overflow: ellipsis; text-wrap: nowrap;">
+            <div class="tresp" style="max-width: 100%; display: inline-block; overflow-x: clip; text-overflow: ellipsis; text-wrap: nowrap;">
             {% if banca.projeto.organizacao %}
               <a href="{% url 'organizacao_completo' banca.projeto.organizacao.id %}">
                 {{ banca.projeto.organizacao.nome }},</a>
