--- a/professores/templates/professores/coorientacoes_alocadas.html
+++ b/professores/templates/professores/coorientacoes_alocadas.html
@@ -13,25 +13,87 @@
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
   
+  <style>
+    .opt_short {
+      display: none;
+    }
+    .opt_full {
+      display: inline;
+    }
+
+    @media screen and (max-width: 800px) {
+      .opt_short {
+        display: inline;
+      }
+      .opt_full {
+        display: none;
+      }
+    }
+
+    .arredondado {
+      table-layout: fixed;
+      max-width: 100%;
+      border-collapse:separate;
+      border-spacing: 4px 6px;
+      margin-left: 6px;
+      margin-right: 12px;
+      margin-bottom: 6px;
+      border: 0px;
+    }
+
+    .arredondado tr {
+      line-height:1.3;
+      height: 1px;
+    }
+
+    .arredondado td {
+      background: #F0F0F0;
+      vertical-align: middle;
+      border: 1px solid grey;
+      border-radius: 6px;
+    }
+
+    tresp {
+      display: inline-block;
+      max-width: 100%;
+      overflow-x: clip;
+      text-overflow: ellipsis;
+      text-wrap: nowrap;
+    }
+
+  </style>
+
 {% endblock %}
 
 {% block content %}
- 
-    <br>
-    <h4>Projeto(s) Coorientado(s)</h4>
-    <ol>
+
+    <span class="titulo">Projetos Coorientados</span>
+
+    <table class="table table-borderless table-sm arredondado"><tbody>
     {% for coorientacao in coorientacoes %}
-      {% if coorientacao.projeto.alocacao_set.all.count > 0 %}
-        <li><a href="{% url 'projeto_completo' coorientacao.projeto.id %}">
-        [{{coorientacao.projeto.ano}}.{{coorientacao.projeto.semestre}}] -
-        {{coorientacao.projeto.get_titulo}}
-        ({{coorientacao.projeto.organizacao.nome}})
-        { {{ coorientacao.projeto.alocacao_set.all.count }} estudante(s) }
-        </a></li>
-      {% endif %}
+      {% ifchanged coorientacao.projeto.periodo %}
+        {% if not forloop.first %}</tbody>{% endif %}
+        <thead><tr><th style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">{{ coorientacao.projeto.periodo }}</th></tr></thead>
+        <tbody>
+      {% endifchanged %}
+
+      <tr><td>
+        {% with n_alocacoes=coorientacao.projeto.alocacao_set.all.count %}
+          {% if n_alocacoes == 0 %}ERRO: PROJETO SEM ESTUDANTES{% endif %}
+          <small style="margin-right: 1px;">#{{ forloop.revcounter }}.</small>
+          <a href="{% url 'projeto_completo' coorientacao.projeto.id %}">
+            <b>{{coorientacao.projeto.ano}}.{{coorientacao.projeto.semestre}}</b> &#x2726;
+            {{coorientacao.projeto.organizacao.nome}}, {{coorientacao.projeto.get_titulo}}
+            { {{ n_alocacoes }} estudante{% if n_alocacoes > 1%}s{% endif %} }
+          </a>
+          {% if projeto.certificado_orientador %}
+            <div><a href="{{ projeto.certificado_orientador.last.documento.url }}" target="_blank" rel="noopener noreferrer"><b>[CERTIFICADO]</b></a></div>
+          {% endif %}
+        {% endwith %}
+      </td></tr>
     {% empty %}
-      Projetos não encontrados
+      Não existem coorientações cadastradas.
     {% endfor %}
-    </ol>
+  </tbody></table>
 
 {% endblock %}
