--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -13,21 +13,72 @@
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
   
+  <style>
+    .opt_short {
+      display: none;
+    }
+    .opt_full {
+      display: inline;
+    }
+
+    @media screen and (max-width: 800px) {
+      .opt_short {
+        display: inline;
+      }
+      .opt_full {
+        display: none;
+      }
+    }
+
+    .arredondado {
+      table-layout: fixed;
+      width: auto; {% comment %} // AQUI ESTÁ DIFERENTE {% endcomment %}
+      max-width: 100%;
+      border-collapse:separate;
+      border-spacing: 4px 6px;
+      margin-left: 6px;
+      margin-right: 12px;
+      margin-bottom: 6px;
+      border: 0px;
+    }
+
+    .arredondado tr {
+      line-height:1.3;
+      height: 1px;
+    }
+
+    .arredondado td {
+      background: #F0F0F0;
+      vertical-align: middle;
+      border: 1px solid grey;
+      border-radius: 6px;
+    }
+
+    tresp {
+      display: inline-block;
+      max-width: 100%;
+      overflow-x: clip;
+      text-overflow: ellipsis;
+      text-wrap: nowrap;
+    }
+
+  </style>
+
 {% endblock %}
 
 {% block content %}
-    
-    <br>
-    <h4>Mentorias em Projeto(s)</h4>
-    <ol>
-      <table>
+
+    <span class="titulo">Mentorias em Projetos</span>
+
+      <table class="table table-borderless table-sm arredondado"><tbody>
+
         {% for e in mentorias %} 
           <tr>
             <td>
               <a class="imprimir" href="{% url 'dinamicas_editar' e.id %}">
                 <big><b>{{e.startDate}} - {{e.endDate|date:'H:i'}}</b></big><br>
               </a>
-              {% if e.projeto %}
+              {% if e.projeto  %}
                 <b>Projeto:</b> <a class="imprimir" href="{% url 'projeto_completo' e.projeto.id %}">
                   {{e.projeto.get_titulo}}
                 </a><br>
@@ -46,13 +97,15 @@
                   {% endif %}
                 </span>
                 
-                {% if e.facilitador %}
+                {% comment %} Meio obvio, parece desnecessário {% endcomment %}
+                {% comment %} {% if e.facilitador %}
                   <div class="facilitador" style="margin-top: 8px;">
                     <b>Facilitador:</b> <a class="imprimir" href="{% url 'user_detail' e.facilitador.id %}">{{ e.facilitador.get_full_name }}</a>
                     <a class="email" href="mailto:{{e.facilitador.email}}">&lt;{{e.facilitador.email}}&gt;</a>&nbsp;
                     <br>
                   </div>
-                {% endif %}
+                {% endif %} {% endcomment %}
+
                 {% if e.location %}
                   <div class="local" style="margin-top: 8px;">
                     <b>Local:</b> 
@@ -68,7 +121,7 @@
                 {% endif %}
                 <div class="grupo" style="margin-top: 8px;">
                   <b>Grupo:</b>
-                  <ol>
+                  <ol style="padding-left: 18px;">
                     {% for alocacao in e.projeto.alocacao_set.all %} 
                       <li><a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}}
                       <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
@@ -85,8 +138,7 @@
         {% empty %}
           Mentorias não encontradas
         {% endfor %}
-      </table>
-    </ol> 
-    <p>&nbsp;</p>
+      </tbody></table>
+      <p>&nbsp;</p>
 
 {% endblock %}
