--- a/professores/templates/professores/orientacoes_alocadas.html
+++ b/professores/templates/professores/orientacoes_alocadas.html
@@ -13,33 +13,91 @@
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
   
+  <style>
+    .opt_short {
+      display: none;
+    }
+    .opt_full {
+      display: inline;
+    }
+
+    @media screen and (max-width: 800px) {
+      .opt_short {
+        display: inline;
+      }
+      .opt_full {
+        display: none;
+      }
+    }
+
+    .arredondado {
+      table-layout: fixed;
+      max-width: 100%;
+      border-collapse:separate;
+      border-spacing: 4px 6px;
+      margin-left: 6px;
+      margin-right: 12px;
+      margin-bottom: 6px;
+      border: 0px;
+    }
+
+    .arredondado tr {
+      line-height:1.3;
+      height: 1px;
+    }
+
+    .arredondado td {
+      background: #F0F0F0;
+      vertical-align: middle;
+      border: 1px solid grey;
+      border-radius: 6px;
+    }
+
+    tresp {
+      display: inline-block;
+      max-width: 100%;
+      overflow-x: clip;
+      text-overflow: ellipsis;
+      text-wrap: nowrap;
+    }
+
+  </style>
+
 {% endblock %}
 
 {% block content %}
 
     <span class="titulo">Projetos Orientados</span>
 
-
-    
+    <table class="table table-borderless table-sm arredondado">
     {% for projeto in projetos %}
-      {% if projeto.alocacao_set.all.count > 0 %}
-        <li><a href="{% url 'projeto_completo' projeto.id %}">
-        {{projeto.ano}}.{{projeto.semestre}} -
-        {{projeto.get_titulo}}
-        ({{projeto.organizacao.nome}})
-        { {{ projeto.alocacao_set.all.count }} estudante(s) }
+      {% ifchanged projeto.periodo %}
+      {% if not forloop.first %}</tbody>{% endif %}
+      <thead><tr><th style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">{{ projeto.periodo }}</th></tr></thead>
+      <tbody>
+    {% endifchanged %}
+
+    <tr><td>
+      <div></div>
+      {% with n_alocacoes=projeto.alocacao_set.all.count %}
+        {% if n_alocacoes == 0 %}ERRO: PROJETO SEM ESTUDANTES{% endif %}
+        <small style="margin-right: 1px;">#{{ forloop.revcounter }}.</small>
+        <a href="{% url 'projeto_completo' projeto.id %}">
+          <b>{{projeto.ano}}.{{projeto.semestre}}</b> &#x2726;
+          {{projeto.organizacao.nome}}, {{projeto.get_titulo}}
+          { {{ n_alocacoes }} estudante{% if n_alocacoes > 1%}s{% endif %} }
         </a>
-        {% if projeto.certificado_orientador %}
-          <a href="{{ projeto.certificado_orientador.last.documento.url }}" target="_blank" rel="noopener noreferrer">[CERTIFICADO]</a>
-        {% endif %}
         {% if projeto.proposta.intercambio %}
           <sup data-toggle="tooltip" data-html="true" animation="true" title="Professor Responsável">PR</sup>
         {% endif %}
-        </li>
-      {% endif %}
+        {% if projeto.certificado_orientador %}
+          <div><a href="{{ projeto.certificado_orientador.last.documento.url }}" target="_blank" rel="noopener noreferrer"><b>[CERTIFICADO]</b></a></div>
+        {% endif %}
+      {% endwith %}
+    </td></tr>
     {% empty %}
       Não existem orientações cadastradas.
     {% endfor %}
-
+  </tbody></table>
 
 {% endblock %}
