--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -13,55 +13,13 @@
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
   
+  <link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}">
+  <link rel="stylesheet" href="{% static 'css/short_full.css' %}">
+
   <style>
-    .opt_short {
-      display: none;
-    }
-    .opt_full {
-      display: inline;
-    }
-
-    @media screen and (max-width: 800px) {
-      .opt_short {
-        display: inline;
-      }
-      .opt_full {
-        display: none;
-      }
-    }
-
     .arredondado {
-      table-layout: fixed;
       width: auto; {% comment %} // AQUI ESTÁ DIFERENTE {% endcomment %}
-      max-width: 100%;
-      border-collapse:separate;
-      border-spacing: 4px 6px;
-      margin-left: 6px;
-      margin-right: 12px;
-      margin-bottom: 6px;
-      border: 0px;
     }
-
-    .arredondado tr {
-      line-height:1.3;
-      height: 1px;
-    }
-
-    .arredondado td {
-      background: #F0F0F0;
-      vertical-align: middle;
-      border: 1px solid grey;
-      border-radius: 6px;
-    }
-
-    tresp {
-      display: inline-block;
-      max-width: 100%;
-      overflow-x: clip;
-      text-overflow: ellipsis;
-      text-wrap: nowrap;
-    }
-
   </style>
 
 {% endblock %}
