--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -30,8 +30,15 @@
 
       <table class="table table-borderless table-sm arredondado"><tbody>
 
-        {% for e in mentorias %} 
-          <tr>
+        {% for e in mentorias %}
+
+          {% ifchanged e.projeto.periodo %}
+            {% if not forloop.first %}</tbody>{% endif %}
+            <thead><tr><th id="{{e.projeto.periodo}}" style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">{{ e.projeto.periodo }} {% if e.projeto.periodo == "Anteriores" %}<i class="seta-baixo"></i>{% endif %}</th></tr></thead>
+            <tbody>
+          {% endifchanged %}
+
+          <tr class="{{e.projeto.periodo}}" {% if e.projeto.periodo == "Anteriores" %}style="display: none;"{% endif %}>
             <td>
               <a class="imprimir" href="{% url 'dinamicas_editar' e.id %}">
                 <big><b>{{e.startDate}} - {{e.endDate|date:'H:i'}}</b></big><br>
@@ -98,5 +105,7 @@
         {% endfor %}
       </tbody></table>
       <p>&nbsp;</p>
+
+      {% include "toggle_anteriores.html" %}
 
 {% endblock %}
