--- a/templates/toggle_anteriores.html
+++ b/templates/toggle_anteriores.html
@@ -7,6 +7,6 @@
 <script>
   $("#Anteriores").on("click", function() {
     $(".Anteriores").toggle();
-    $("i", this).toggleClass("seta-baixo seta-cima");
+    $("input", this).toggleClass("seta-baixo seta-cima");
   });
 </script>
