--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -14,25 +14,23 @@
     <br>
     <h5>Alocações</h5>
     <ul>
-        <li><a href="{% url 'bancas_alocadas' %}">Bancas Alocadas</a></li>
-        <li><a href="{% url 'orientacoes_alocadas' %}">Orientações Alocadas</a></li>
-        <li><a href="{% url 'coorientacoes_alocadas' %}">Coorientações Alocadas</a></li>
-        <li><a href="{% url 'mentorias_alocadas' %}">Mentorias Alocadas</a></li>
+        <li><a href="{% url 'orientacoes_alocadas' %}">Orientações</a></li>
+        <li><a href="{% url 'coorientacoes_alocadas' %}">Coorientações</a></li>
+        <li><a href="{% url 'bancas_alocadas' %}">Bancas</a></li>
+        <li><a href="{% url 'mentorias_alocadas' %}">Mentorias</a></li>
     </ul>
 
     <h5>Atividades do Orientador</h5>
     <ul>
         <li><a href="{% url 'planos_de_orientacao' %}">Planos de Orientação</a></li>
         <li><a href="{% url 'relatos_quinzenais' %}">Relatos Quinzenais</a></li>
+        <li><a href="{% url 'avaliacoes_pares' %}">Avaliação de Pares</a></li>
     </ul>
 
-    <h5>Avaliações</h5>
+    <h5>Notas</h5>
     <ul>
-        <li><a href="{% url 'estudantes_notas' "meus_projetos" %}">Notas Individuais de Estudantes</a></li>
-        <li><a href="{% url 'resultado_meus_projetos' %}">Notas de Grupo dos Projetos</a></li>
-        <li><a href="{% url 'avaliacoes_pares' %}">Ver Avaliação de Pares</a></li>
+        <li><a href="{% url 'estudantes_notas' "meus_projetos" %}">Individuais</a></li>
+        <li><a href="{% url 'resultado_meus_projetos' %}">Grupo</a></li>
     </ul>
 
-    
-    
 {% endblock %}
