--- a/professores/templates/professores/relatos_quinzenais.html
+++ b/professores/templates/professores/relatos_quinzenais.html
@@ -14,6 +14,9 @@
   {% comment %} Para recarregar a página em caso de um botão back ou similar {% endcomment %}
   {% include "reload.html" %}
 
+  <link rel="stylesheet" href="{% static 'css/div_arrend.css' %}">
+  <link rel="stylesheet" href="{% static 'css/outros.css' %}">
+
 {% endblock %}
 
 {% block content %}
@@ -26,47 +29,44 @@
 
   <div class="atualizar">
 
-    {% for projeto in projetos %}
+      {% for projeto in projetos %}
+        <div class="div_arredondado">
+          {% if projeto.tem_relatos %}
+            <div class="tresp"><strong>Projeto:</strong> <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+            {% include "tipo_projeto.html" with com_tipo=False %}</div>
+            <strong>Organização:</strong>
+            {% if projeto.organizacao %}
+              <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>
+            {% else %}
+              ORGANIZAÇAO NÃO DEFINIDA
+            {% endif %}
+            <br>
+            {% if edicao == "todas" %}
+              <strong>Semestre:</strong> {{projeto.ano}}.{{projeto.semestre}}<br>
+            {% endif %}
+            {% if administracao %}<strong>Orientador:</strong>
+              {% if projeto.orientador %}
+                <a href="{% url 'professor_detail' projeto.orientador.id %}">{{projeto.orientador}}</a>
+              {% else %}
+                ORIENTADOR NÃO DEFINIDO
+              {% endif %}
+            {% endif %}
 
-      <strong>Projeto:</strong> <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
-      {% include "tipo_projeto.html" with com_tipo=False %}<br>
-      <strong>Organização:</strong>
-      {% if projeto.organizacao %}
-        <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>
-      {% else %}
-        ORGANIZAÇAO NÃO DEFINIDA
-      {% endif %}
-      <br>
-      {% if edicao == "todas" %}
-        <strong>Semestre:</strong> {{projeto.ano}}.{{projeto.semestre}}<br>
-      {% endif %}
-      {% if administracao %}<strong>Orientador:</strong>
-        {% if projeto.orientador %}
-          <a href="{% url 'professor_detail' projeto.orientador.id %}">{{projeto.orientador}}</a>
-        {% else %}
-          ORIENTADOR NÃO DEFINIDO
-        {% endif %}
-      {% endif %}
+            <div style="margin-top:8px;"><strong>Relatos (prazos para estudantes):</strong></div>
 
-      <div style="margin-top:8px;"><strong>Relatos (prazos para estudantes):</strong></div>
+            {% with alocacoes=projeto.alocacao_set.all %}
+              {% include "relatos.html" %}
+            {% endwith %}
 
-      {% with alocacoes=projeto.alocacao_set.all %}
-        {% include "relatos.html" %}
-      {% endwith %}
+          {% endif %}
+        </div>
 
-      {% if not forloop.last %}
-        <hr>
-      {% endif %}
-
-    {% empty %}
-
-      Sem alocações de projetos esse semestre.
-
-    {% endfor %}
+      {% empty %}
+       Sem alocações de projetos esse semestre.
+      {% endfor %}
 
     <script>
-      function carrega_pagina(){
-      };
+      function carrega_pagina(){};
       window.onload = carrega_pagina
     </script>
 
