--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
   <link rel="stylesheet" href="{% static 'bootstrap-4.3.1-dist/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'fontawesome-free-5.15.1-web/css/all.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+  <link rel="stylesheet" href="{% static 'css/cores.css' %}">
+
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
   <script type="text/javascript" src="{% static 'js/pfe.js' %}"></script>
   <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
