--- a/templates/relatos.html
+++ b/templates/relatos.html
@@ -4,6 +4,9 @@
     Data: 20 de Fevereiro de 2022
 {% endcomment %}
 
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/short_full.css' %}">
+
 <style>
   table {
     border-collapse: collapse;
@@ -13,19 +16,12 @@
     padding: 0px 6px 0px 6px;
     border: 0px;
   }
-  .opt_short {display: none;}
-  .opt_full {display: inline;}
-  @media screen and (max-width: 800px) {
-    .opt_short {display: inline;}
-    .opt_full {display: none;}
-  }
 </style>
 
 {% if projeto %}
-  <table class=" table-striped">
+  <table class="table-striped">
   {% for evento, relatos, avaliados in projeto.get_relatos %}
     <tr style="padding-left: 18px;">
-      
         <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}">{{ forloop.counter }}&ordm;</a></td>
         <td><a href="{% url 'relato_avaliar' projeto.id evento.id %}">
           <span class="opt_full">{{ evento.endDate|date:"DATE_FORMAT" }}</span>
