melhorando compatibilidade com Firefox

--- a/templates/toggle_anteriores.html
+++ b/templates/toggle_anteriores.html
@@ -6,7 +6,7 @@
 
 <script>
   $("#Anteriores").on("click", function() {
-    $(".Anteriores").toggle();
-    $("input", this).toggleClass("seta-baixo seta-cima");
+    $(".Anteriores").toggle(200);
+    $("span", this).toggleClass("seta-baixo seta-cima");
   });
 </script>
