--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -29,7 +29,7 @@
           {% ifchanged e.projeto.periodo %}
             {% if not forloop.first %}</tbody>{% endif %}
             <thead><tr><th id="{{e.projeto.periodo}}" style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">{{ e.projeto.periodo }} 
-              {% if e.projeto.periodo == "Anteriores" %}<input class="seta-baixo" type="checkbox"></input>{% endif %}</th></tr></thead>
+              {% if e.projeto.periodo == "Anteriores" %}<span class="seta-baixo"></span>{% endif %}</th></tr></thead>
             <tbody>
           {% endifchanged %}
 
