--- a/professores/templates/professores/planos_de_orientacao.html
+++ b/professores/templates/professores/planos_de_orientacao.html
@@ -29,7 +29,7 @@
         {% ifchanged projeto.periodo %}
           {% if not forloop.first %}</tbody>{% endif %}
           <thead><tr><th id="{{projeto.periodo}}" style="margin-top: 1em; font-weight: bold; font-size: 1.2rem;">{{ projeto.periodo }} 
-            {% if projeto.periodo == "Anteriores" %}<input class="seta-baixo" type="checkbox"></input>{% endif %}</th></tr></thead>
+            {% if projeto.periodo == "Anteriores" %}<span class="seta-baixo"></span>{% endif %}</th></tr></thead>
           <tbody>
         {% endifchanged %}
         <tr class="{{projeto.periodo}} {% if projeto.periodo == "Anteriores" %}hidden_tr{% endif %}"><td>
