botão para orientador confirmar a avaliação de pares

--- a/operacional/templates/operacional/index_operacional.html
+++ b/operacional/templates/operacional/index_operacional.html
@@ -22,7 +22,7 @@
     <ul>
         <li><a href="{% url 'planos_de_orientacao_todos' %}">Planos de Orientação</a></li>
         <li><a href="{% url 'relatos_quinzenais' 'todos' %}">Relatos Quinzenais</a></li>
-        <li><a href="{% url 'avaliacoes_pares_todas' %}">Avaliações de Pares</a></li>
+        <li><a href="{% url 'avaliacoes_pares' 'todos' %}">Avaliações de Pares</a></li>
         <li><a href="{% url 'informe_bancas' 1 %}">Bancas Intermediárias</a></li>
         <li><a href="{% url 'informe_bancas' 0 %}">Bancas Finais</a></li>
     </ul>
