--- a/professores/templates/professores/ver_pares.html
+++ b/professores/templates/professores/ver_pares.html
@@ -38,6 +38,7 @@
     {% endif %}
     <br><br>
 
+    <b>Orientações passadas aos estudantes:</b>
     <div style="max-width: 700px;">{{configuracao.msg_aval_pares}}</div>
     <hr>
 
@@ -145,10 +146,17 @@
         Apesar de não ter dificuldades, estava sempre reportando como estava indo.</p>
       </div>
       <br>
-      <hr>
+
+      {% if not forloop.last %}<hr>{% endif %}
+      
 
     {% endfor %}
 
-
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <br>
+    <br>
+    <button class="btn btn-primary" type="submit" {% if user != projeto.orientador.user %}disabled{% endif %}>Confirmar Avaliação</button>
+  </form>
 
 {% endblock %}
